--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "next": "^9.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-query": "^1.2.9"
+    "react-query": "^1.2.9",
+    "react-table": "^7.0.4"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.2",
+    "@tailwindcss/ui": "^0.2.2",
     "@types/react": "^16.9.34",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.4.0",
