--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@databases/pg": "^2.1.1",
+    "@reach/menu-button": "^0.10.1",
     "firebase": "^7.14.2",
     "firebase-admin": "^8.11.0",
     "next": "^9.3.6",
