--- a/package.json
+++ b/package.json
@@ -8,23 +8,29 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@databases/pg": "^2.1.1",
     "@reach/menu-button": "^0.10.1",
     "firebase": "^7.14.2",
     "firebase-admin": "^8.11.0",
+    "immer": "^6.0.3",
     "next": "^9.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-query": "^1.3.0",
-    "react-table": "^7.0.4"
+    "react-table": "^7.0.4",
+    "react-use": "^14.2.0",
+    "use-immer": "^0.4.0"
   },
   "devDependencies": {
     "@tailwindcss/ui": "^0.3.0",
     "@types/react": "^16.9.34",
+    "patch-package": "^6.2.2",
     "postcss-preset-env": "^6.7.0",
+    "postinstall-postinstall": "^2.1.0",
     "tailwindcss": "^1.4.4",
     "typescript": "^3.8.3"
   },
