--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p ${PORT-3000}",
     "postinstall": "patch-package"
   },
   "dependencies": {
