--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@databases/pg": "^2.1.1",
     "@reach/alert-dialog": "^0.10.1",
     "@reach/menu-button": "^0.10.1",
     "cookie": "^0.4.1",
     "firebase": "^7.14.2",
     "firebase-admin": "^8.11.0",
-    "immer": "^6.0.3",
+    "immer": "^6.0.5",
+    "knex": "^0.21.1",
     "next": "^9.3.6",
+    "pg": "^8.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-query": "^1.3.0",
+    "react-query": "^1.3.3",
     "react-table": "^7.0.4",
     "react-use": "^14.2.0",
     "use-immer": "^0.4.0"
