--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "knex": "^0.21.1",
     "next": "^9.3.6",
     "pg": "^8.0.3",
+    "polka": "^1.0.0-next.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-query": "^1.3.3",
