--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-query": "^1.3.3",
     "react-table": "^7.0.4",
     "react-use": "^14.2.0",
+    "rmwc": "^6.1.0",
     "use-immer": "^0.4.0"
   },
   "devDependencies": {
