--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^7.14.2",
     "firebase-admin": "^8.11.0",
     "immer": "^6.0.5",
+    "intl-dateformat": "^0.1.4",
     "knex": "^0.21.1",
     "next": "^9.3.6",
     "pg": "^8.0.3",
