--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@reach/alert-dialog": "^0.10.1",
     "@reach/menu-button": "^0.10.1",
+    "bcrypt": "^4.0.1",
+    "connect-pg-simple": "^6.1.0",
     "cookie": "^0.4.1",
+    "cookie-session": "^1.4.0",
     "firebase": "^7.14.2",
     "firebase-admin": "^8.11.0",
     "immer": "^6.0.5",
@@ -32,7 +35,11 @@
   },
   "devDependencies": {
     "@tailwindcss/ui": "^0.3.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/connect-pg-simple": "^4.2.0",
     "@types/cookie": "^0.3.3",
+    "@types/cookie-session": "^2.0.39",
+    "@types/express-session": "^1.17.0",
     "@types/react": "^16.9.34",
     "patch-package": "^6.2.2",
     "postcss-preset-env": "^6.7.0",
