--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@tailwindcss/ui": "^0.3.0",
     "@types/bcrypt": "^3.0.0",
     "@types/node": "^13.13.5",
+    "@types/pg": "^7.14.3",
     "@types/react": "^16.9.35",
     "patch-package": "^6.2.2",
+    "pg-types": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "postinstall-postinstall": "^2.1.0",
     "tailwindcss": "^1.4.6",
