--- a/knex/package.json
+++ b/knex/package.json
@@ -1,20 +1,18 @@
 {
   "name": "knex",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "database migration scripts",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "reseed": "knex migrate:rollback && knex migrate:latest && knex seed:run"
+    "seed:dev": "knex migrate:rollback && knex migrate:latest && knex seed:run",
+    "seed:prod": "knex --env production migrate:rollback && knex --env production migrate:latest && knex --env production seed:run"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^13.13.5",
     "@types/pg-copy-streams": "^1.2.1",
     "knex": "^0.21.1",
-    "pg-copy-streams": "^3.0.0",
+    "pg-copy-streams": "^4.0.0",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
   }
