--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "immer": "^6.0.5",
     "intl-dateformat": "^0.1.4",
     "knex": "^0.21.1",
-    "next": "^9.4.0",
+    "next": "^9.4.1-canary.5",
     "next-iron-session": "^4.1.2",
-    "pg": "^8.1.0",
+    "pg": "^8.2.0",
     "polka": "^1.0.0-next.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-query": "^1.4.0",
-    "react-table": "^7.0.4",
+    "react-query": "^1.4.4",
+    "react-table": "^7.0.6",
     "react-use": "^14.2.0",
     "use-immer": "^0.4.0"
   },
   "devDependencies": {
     "@tailwindcss/ui": "^0.3.0",
     "@types/bcrypt": "^3.0.0",
-    "@types/node": "^13.13.5",
+    "@types/node": "^14.0.1",
     "@types/pg": "^7.14.3",
     "@types/react": "^16.9.35",
     "patch-package": "^6.2.2",
@@ -40,7 +40,7 @@
     "postcss-preset-env": "^6.7.0",
     "postinstall-postinstall": "^2.1.0",
     "tailwindcss": "^1.4.6",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.2"
   },
   "browserslist": [
     "last 1 chrome versions"
