--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "immer": "^6.0.5",
     "intl-dateformat": "^0.1.4",
     "knex": "^0.21.1",
-    "next": "^9.4.1-canary.5",
+    "next": "^9.4.1",
     "next-iron-session": "^4.1.2",
-    "pg": "^8.2.0",
+    "pg": "^8.2.1",
     "polka": "^1.0.0-next.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-query": "^1.4.4",
-    "react-table": "^7.0.6",
-    "react-use": "^14.2.0",
+    "react-query": "^1.5.2",
+    "react-table": "^7.1.0",
+    "react-use": "^15.1.0",
     "use-immer": "^0.4.0"
   },
   "devDependencies": {
