--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-query": "^1.5.2",
     "react-table": "^7.1.0",
     "react-use": "^15.1.0",
+    "recoil": "^0.0.7",
     "use-immer": "^0.4.0"
   },
   "devDependencies": {
