--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "bcrypt": "^4.0.1",
     "immer": "^6.0.5",
     "intl-dateformat": "^0.1.4",
-    "knex": "^0.21.1",
     "next": "^9.4.2",
     "next-iron-session": "^4.1.2",
-    "pg": "^8.2.1",
+    "pg-promise": "^10.5.6",
     "polka": "^1.0.0-next.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
